Multires modifier normal corruption on apply base #35513

Closed
opened 2013-05-26 21:12:30 +02:00 by michalis zissiou · 5 comments

%%%--- Operating System, Graphics card ---
OSX 10.6.8
MacPro dualXeon 16 threads, 24 GB RAM.
ATI HD 5880

also tested on ubuntu 13.04
NVIDIA 540M GT
intel i5 8GB RAM

- Blender version with error, and version that worked ---
  • r57019

    • Short description of error ---
      Applying base on a sculted model corrupts the normals and the operation only proceeds on undo

    • Steps for others to reproduce the error (preferably based on attached .blend file) ---
      On default Cube:

  • Add subsurf modifier at level 6 and apply it
  • Add multiresolution modifier and add a few levels of subdivision
  • Sculpt something with enough strength to make significant displacement, for example using a grab brush
  • Press Apply base
  • From the modifier options decrease the sculpt level to zero.
  • Notice that there's a "Not supported in sculpt mode" warning!?!
  • Notice that the normals are corrupted
  • Do undo (Ctrl-Z).Apply base is now applied properly.%%%
%%%--- Operating System, Graphics card --- OSX 10.6.8 MacPro dualXeon 16 threads, 24 GB RAM. ATI HD 5880 also tested on ubuntu 13.04 NVIDIA 540M GT intel i5 8GB RAM - Blender version with error, and version that worked --- - r57019 - Short description of error --- Applying base on a sculted model corrupts the normals and the operation only proceeds on undo - Steps for others to reproduce the error (preferably based on attached .blend file) --- On default Cube: * Add subsurf modifier at level 6 and apply it * Add multiresolution modifier and add a few levels of subdivision * Sculpt something with enough strength to make significant displacement, for example using a grab brush * Press Apply base * From the modifier options decrease the sculpt level to zero. * Notice that there's a "Not supported in sculpt mode" warning!?! * Notice that the normals are corrupted * Do undo (Ctrl-Z).Apply base is now applied properly.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Could not reproduce the issue on linux 64bit.%%%

%%%Could not reproduce the issue on linux 64bit.%%%

%%%Hi Sergey, on both this and #35515 I was present with Michalis so I can verify the bug happens (The second machine is mine), and I can also see it on Windows. We forgot to add that to see it you need smooth shading on the sphere.%%%

%%%Hi Sergey, on both this and #35515 I was present with Michalis so I can verify the bug happens (The second machine is mine), and I can also see it on Windows. We forgot to add that to see it you need smooth shading on the sphere.%%%

%%%Ah, Antony, this was crucial information :)

Fixed in svn rev57071.

Thanks for the report, closing now!%%%

%%%Ah, Antony, this was crucial information :) Fixed in svn rev57071. Thanks for the report, closing now!%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35513
No description provided.