Fix #35513: Multires modifier normal corruption on apply base

Seems it was simply missing mesh normals update in multiresModifier_base_apply.